...
                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="soapbox_splash_image" translatesAutoresizingMaskIntoConstraints="NO" id="Bsd-VX-gB3">
                                <rect key="frame" x="228" y="45" width="144" height="192"/>
                                <animations/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="Bsd-VX-gB3" secondAttribute="height" multiplier="3:4" id="3PS-sf-QjH"/>
                                </constraints>
                            </imageView>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="22" translatesAutoresizingMaskIntoConstraints="NO" id="tsm-yG-wFd">
                                <rect key="frame" x="16" y="245" width="568" height="30"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="310" id="HhH-6J-iMg"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="22"/>
...
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="HhH-6J-iMg"/>
                                    </mask>
                                </variation>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="22" translatesAutoresizingMaskIntoConstraints="NO" id="W6h-MQ-IY8">
                                <rect key="frame" x="16" y="283" width="568" height="30"/>
                                <animations/>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="22"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="go" secureTextEntry="YES"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GfD-5k-mPL">
...
                                <animations/>
                                <color key="backgroundColor" red="0.99215686270000003" green="0.6705882353" blue="0.30980392159999998" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="39" id="lcN-Ut-3Iy"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                <state key="normal" title="Register">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="registerPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="MGL-g3-4EY"/>
                                </connections>
...
                        <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                        <connections>
                            <outlet property="dataSource" destination="OV6-ml-w6O" id="3h1-A3-pUA"/>
                            <outlet property="delegate" destination="OV6-ml-w6O" id="ku1-Xn-HWh"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Channels" id="Ive-zN-jLS">
                        <barButtonItem key="leftBarButtonItem" title="Sign Out" id="dUy-1o-EhJ">
                            <connections>
                                <action selector="signoutPressed:" destination="OV6-ml-w6O" id="eE9-BE-qbz"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="dCE-FN-m8Z">
                            <connections>
...
            </objects>
            <point key="canvasLocation" x="2778" y="-90"/>
        </scene>
        <!--New Channel-->
        <scene sceneID="4Jz-aA-FIs">
            <objects>
                <tableViewController storyboardIdentifier="NewTopicTableViewController" title="New Channel" useStoryboardIdentifierAsRestorationIdentifier="YES" id="kPZ-0Y-QtM" customClass="NewTopicTableViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" allowsMultipleSelection="YES" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="33O-iS-WLa">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <animations/>
                        <color key="backgroundColor" red="0.93725490196078431" green="0.93725490196078431" blue="0.95686274509803926" alpha="1" colorSpace="calibratedRGB"/>
                        <prototypes>
...
