...
// This is used to create our 2 default channels for this app and subscribe the user to the Announcements channel
- (void)setupChannels {
    /*
	 *  Creating a new MMXChannel object.
	 *	I am setting a summary to potentially display to future users as part of channel discovery.
	 */
	NSString *channelName = @"company_announcements";
	NSString *channelSummary = @"The Company Announcements channel is designed to distribute information that should be available to all employees.";
	
	/*
	 *  Creating a new channel by passing my MMXChannel object.
	 *	When a user creates a channel they are automatically subscribed to it.
	 */
...
				 */
				[[MMXLogger sharedLogger] error:@"ChannelListTableViewController setupChannels channelForName Error = %@", error.localizedFailureReason];
			}];
        }
    }];

	NSString *lunchChannelName = @"lunch_buddies";
	NSString *lunchChannelSummary = @"Lunch Buddies is a channel for finding other people to go to lunch with.";
	[MMXChannel createWithName:lunchChannelName summary:lunchChannelSummary isPublic:YES publishPermissions:MMXPublishPermissionsSubscribers success:^(MMXChannel *channel) {
	} failure:^(NSError *error) {
		if (error.code != 409) {
			NSLog(@"createChannel for channel %@ Error = %@", lunchChannelName, error);
		}
...
