/*
* Copyright (c) 2015 Magnet Systems, Inc.
* All rights reserved.
*
* Licensed under the Apache License, Version 2.0 (the "License"); you
* may not use this file except in compliance with the License. You
* may obtain a copy of the License at
*
* http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
* implied. See the License for the specific language governing
* permissions and limitations under the License.
*/

import UIKit

class MessagesViewController: ChatViewController {
    
    
    // MARK: Overrides

    
     override func getChannel() {
        // channel is already set for MessagesViewController
        messageHistory()
    }
    
    override func viewWillAppear(animated: Bool) {
        super.viewWillAppear(animated)
        
        if let tabBarVC = self.tabBarController {
            tabBarVC.navigationItem.title = myChatChannel?.name
            tabBarVC.navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Send", style: .Plain, target: self, action: Selector("sendMessage:"))
            //disabled if no permissions
            tabBarVC.navigationItem.rightBarButtonItem?.enabled = myChatChannel!.canPublish
        }
    }

}
